fix menu on mobile

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -25,10 +25,10 @@ body {
   height: 100%;
 
   .pageContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: space-between;
+    // height: 100%;
     min-height: 600px;
   }
 }
